# Note, this test is currently disabled. It's been replaced by a playwright test.
appId: io.tlon.groups
---
- runFlow: subflows/launch.yaml
- runFlow: subflows/tlon-login.yaml
- assertVisible: 'Workspaces'
- tapOn:
    id: 'AvatarNavIcon'
- assertVisible: 'Contacts'
- tapOn:
    id: 'ContactsAddButton'
- tapOn: 'Filter by nickname, @p'
- inputText: 'zod'
- 'hideKeyboard'
- tapOn:
    id: 'ContactRow'
- runFlow:
    when:
      visible: 'Add 1 contact'
    commands:
      - tapOn: 'Add 1 contact'
- assertVisible: 'Contacts'
- tapOn: '~zod'
- assertVisible: 'Remove Contact'
- tapOn: 'Edit'
- assertVisible: 'Edit Profile'
- tapOn: '~zod'
- inputText: 'Testing pet name'
- 'hideKeyboard'
- tapOn: 'Change avatar image'
- assertVisible: 'Photo Library'
- swipe:
    direction: 'DOWN'
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: 'Done'
- assertVisible: 'Profile'
- assertVisible: 'Testing pet name'
- tapOn:
    id: 'HeaderBackButton'
- assertVisible: 'Contacts'
- assertVisible: 'Testing pet name'
- tapOn: 'Testing pet name'
- tapOn: 'Remove Contact'
- assertVisible: 'zod'
- tapOn: 'Message'
- assertVisible: 'Message'
- tapOn:
    id: 'HeaderBackButton'
# Log out
- tapOn:
    id: 'AvatarNavIcon'
- tapOn:
    id: 'ContactsSettingsButton'
- tapOn: 'Log out'
- tapOn: 'Log out now'
