# Note, this test is currently disabled. It's been replaced by a playwright test.
appId: io.tlon.groups
---
- runFlow: subflows/launch.yaml
- runFlow: subflows/tlon-login.yaml
- assertVisible: 'Workspaces'
# Tap on the "+" button
- tapOn:
    id: 'CreateGroupButton'
# Assert that the sheet pops
- assertVisible: 'Create a customizable group chat'
- tapOn: 'New group'
# Assert that the contacts sheet pops
- assertVisible: 'Select contacts to invite'
# Create the group
- tapOn: 'Create group'
- runFlow:
    when:
      visible: 'Untitled group'
    commands:
      - assertVisible: 'Welcome to your group!'
# Navigate back to the Workspaces list and assert that the group is created
- tapOn:
    id: 'HeaderBackButton'
- runFlow:
    when:
      visible: 'Workspaces'
    commands:
      - assertVisible: 'Untitled group'
      - tapOn: 'Untitled group'
      - assertVisible: 'Untitled group'
# Open the overflow menu from the channel header and delete the group
- tapOn:
    id: 'ChannelHeaderOverflowMenuButton'
- assertVisible: 'Secret group with 1 member'
- tapOn: 'Group info & settings'
- assertVisible: 'Group info'
- scrollUntilVisible:
    direction: DOWN
    element:
      text: 'Delete group'
- tapOn: 'Delete group'
- runFlow:
    when:
      visible: 'This action cannot be undone.'
    commands:
      - assertVisible: 'This action cannot be undone.'
      - tapOn: 'Delete group'
- runFlow:
    when:
      visible: 'Workspaces'
    commands:
      - assertVisible: 'Workspaces'
      - assertNotVisible: 'Untitled group'
# Log out
- tapOn:
    id: 'AvatarNavIcon'
- tapOn:
    id: 'ContactsSettingsButton'
- tapOn: 'Log out'
- tapOn: 'Log out now'
